correct gap in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
     margin: 10px 80px 0px 80px;
     max-width: 1600px;
     margin: 0 auto;
+    gap: 80px;
 }
 .menu{
     display: flex;
